--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
                 <div class="marcas-wrapper">
                     <div class="marca-item">
                         <input type="text" class="item-marca" placeholder="Marca">
+                        <input type="number" class="valor-unit-marca" placeholder="Valor Unitário" step="0.01" min="0">
+                        <span class="valor-total-marca">R$ 0,00</span>
+                        <button type="button" class="btn-remove-marca"><i class="fas fa-minus"></i></button>
                     </div>
                 </div>
                 <button type="button" class="btn-add-marca"><i class="fas fa-plus"></i></button>
