--- a/index.html
+++ b/index.html
@@ -146,7 +146,11 @@
                 <div class="marcas-wrapper">
                     <div class="marca-item">
                         <input type="text" class="item-marca" placeholder="Marca">
-                        <input type="number" class="valor-unit-marca" placeholder="Valor Unitário" step="0.01" min="0">
+                        <div class="marca-orcamentos">
+                            <label>Orçamento 1: <input type="number" class="valor-unit-marca-1" placeholder="Valor Unit. 1" step="0.01" min="0"></label>
+                            <label>Orçamento 2: <input type="number" class="valor-unit-marca-2" placeholder="Valor Unit. 2" step="0.01" min="0"></label>
+                            <label>Orçamento 3: <input type="number" class="valor-unit-marca-3" placeholder="Valor Unit. 3" step="0.01" min="0"></label>
+                        </div>
                         <span class="valor-total-marca">R$ 0,00</span>
                         <button type="button" class="btn-remove-marca"><i class="fas fa-minus"></i></button>
                     </div>
