--- a/index.html
+++ b/index.html
@@ -145,13 +145,16 @@
             <td class="marca-container">
                 <div class="marcas-wrapper">
                     <div class="marca-item">
+                        <input type="radio" name="marca-selecionada-0" class="marca-radio" title="Selecionar esta marca">
                         <input type="text" class="item-marca" placeholder="Marca">
                         <div class="marca-orcamentos">
                             <label>Orçamento 1: <input type="number" class="valor-unit-marca-1" placeholder="Valor Unit. 1" step="0.01" min="0"></label>
+                            <span class="valor-total-marca-1">R$ 0,00</span>
                             <label>Orçamento 2: <input type="number" class="valor-unit-marca-2" placeholder="Valor Unit. 2" step="0.01" min="0"></label>
+                            <span class="valor-total-marca-2">R$ 0,00</span>
                             <label>Orçamento 3: <input type="number" class="valor-unit-marca-3" placeholder="Valor Unit. 3" step="0.01" min="0"></label>
+                            <span class="valor-total-marca-3">R$ 0,00</span>
                         </div>
-                        <span class="valor-total-marca">R$ 0,00</span>
                         <button type="button" class="btn-remove-marca"><i class="fas fa-minus"></i></button>
                     </div>
                 </div>
