--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 </head>
 <body>
     <div class="container">
+        <!-- Instruções rápidas -->
+        <div style="background:#e3eafc;color:#3f51b5;padding:12px 24px;text-align:center;font-size:1.1rem;margin-bottom:8px;border-radius:8px;max-width:1200px;margin:auto;">
+            <strong>Bem-vindo!</strong> Preencha os dados dos fornecedores, adicione itens e marcas, digite os valores unitários e veja os cálculos automáticos. Clique nos botões para exportar, imprimir ou salvar sua licitação.
+        </div>
         <header>
             <h1>Sistema de Licitação para Escolas Públicas</h1>
         </header>
@@ -82,6 +86,9 @@
         </div>
 
         <div class="table-container">
+            <div id="chart-container" style="width:100%;max-width:900px;margin:24px auto 0 auto;background:#fff;border-radius:12px;box-shadow:0 2px 8px rgba(0,0,0,0.06);padding:24px 24px 8px 24px;">
+                <canvas id="totaisChart" height="80"></canvas>
+            </div>
             <table id="licitacao-table">
                 <thead>
                     <tr>
@@ -195,6 +202,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
     
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
