--- a/index.html
+++ b/index.html
@@ -4,6 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Licitação para Escolas Públicas</title>
+    <style>
+        /* Melhoria visual para cabeçalhos e seções */
+        thead tr th, thead tr th[colspan] {
+            background: linear-gradient(90deg, #0056b3 80%, #007bff 100%);
+            color: #fff;
+            font-size: 1.1em;
+            border-bottom: 3px solid #003d82;
+        }
+        thead tr:nth-child(2) th {
+            background: #0069d9;
+            color: #fff;
+        }
+        tbody td input[type="number"], tbody td input[type="text"], tbody td textarea {
+            background: #f8f9fa;
+            border: 2px solid #b3d7ff;
+            border-radius: 4px;
+            font-size: 1em;
+        }
+        tbody td input[type="number"]:focus, tbody td input[type="text"]:focus, tbody td textarea:focus {
+            border-color: #0056b3;
+            background: #e3f0ff;
+        }
+        .valor-total-1, .valor-total-2, .valor-total-3, .valor-medio-unit, .valor-medio-total, .menor-valor-unit, .menor-valor-total {
+            background: #e9f7ef;
+            font-weight: bold;
+            color: #155724;
+            border-radius: 3px;
+        }
+        .marca-row td {
+            background: #fffbe6;
+        }
+        .marca-row input[type="number"] {
+            background: #fffde7;
+            border: 2px solid #ffe082;
+        }
+        .marca-row input[type="number"]:focus {
+            border-color: #ffc107;
+            background: #fff8e1;
+        }
+        .dica-campo {
+            font-size: 0.9em;
+            color: #888;
+            margin-top: 2px;
+        }
+        tfoot td {
+            background: #f1f1f1;
+            font-size: 1.05em;
+        }
+    </style>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Bibliotecas para exportação -->
@@ -86,27 +135,27 @@
                 <thead>
                     <tr>
                         <th rowspan="2">N.</th>
-                        <th rowspan="2" class="col-item">Item</th>
-                        <th rowspan="2" class="col-descricao">Descrição Detalhada</th>
-                        <th rowspan="2">Unidade</th>
-                        <th rowspan="2">Qtd</th>
-                        <th rowspan="2">Marca</th>
-                        <th colspan="3">Orçamento 1</th>
-                        <th colspan="3">Orçamento 2</th>
-                        <th colspan="3">Orçamento 3</th>
+                        <th rowspan="2" class="col-item">Item<br><span class="dica-campo">(Ex: Arroz, Feijão...)</span></th>
+                        <th rowspan="2" class="col-descricao">Descrição Detalhada<br><span class="dica-campo">(Detalhe a especificação do item)</span></th>
+                        <th rowspan="2">Unidade<br><span class="dica-campo">(Ex: Kg, L, Un)</span></th>
+                        <th rowspan="2">Qtd<br><span class="dica-campo">(Quantidade)</span></th>
+                        <th rowspan="2">Marca<br><span class="dica-campo">(Clique + para adicionar)</span></th>
+                        <th colspan="3">Orçamento 1<br><span class="dica-campo">(Fornecedor 1)</span></th>
+                        <th colspan="3">Orçamento 2<br><span class="dica-campo">(Fornecedor 2)</span></th>
+                        <th colspan="3">Orçamento 3<br><span class="dica-campo">(Fornecedor 3)</span></th>
                         <th colspan="2">Valor Médio</th>
                         <th colspan="2">Menor Preço</th>
                         <th rowspan="2">Ações</th>
                     </tr>
                     <tr>
                         <th>Fornecedor</th>
-                        <th>Valor Unit.</th>
+                        <th>Valor Unitário<br><span class="dica-campo">(Digite o valor)</span></th>
                         <th>Valor Total</th>
                         <th>Fornecedor</th>
-                        <th>Valor Unit.</th>
+                        <th>Valor Unitário<br><span class="dica-campo">(Digite o valor)</span></th>
                         <th>Valor Total</th>
                         <th>Fornecedor</th>
-                        <th>Valor Unit.</th>
+                        <th>Valor Unitário<br><span class="dica-campo">(Digite o valor)</span></th>
                         <th>Valor Total</th>
                         <th>Valor Unit.</th>
                         <th>Valor Total</th>
