--- a/index.html
+++ b/index.html
@@ -139,24 +139,16 @@
                         <th rowspan="2" class="col-descricao">Descrição Detalhada<br><span class="dica-campo">(Detalhe a especificação do item)</span></th>
                         <th rowspan="2">Unidade<br><span class="dica-campo">(Ex: Kg, L, Un)</span></th>
                         <th rowspan="2">Qtd<br><span class="dica-campo">(Quantidade)</span></th>
-                        <th rowspan="2">Marca<br><span class="dica-campo">(Clique + para adicionar)</span></th>
-                        <th colspan="3">Orçamento 1<br><span class="dica-campo">(Fornecedor 1)</span></th>
-                        <th colspan="3">Orçamento 2<br><span class="dica-campo">(Fornecedor 2)</span></th>
-                        <th colspan="3">Orçamento 3<br><span class="dica-campo">(Fornecedor 3)</span></th>
+                        <th rowspan="2">Marca<br><span class="dica-campo">(Até 3 marcas por item)</span></th>
+                        <th>Valor Unitário</th>
+                        <th>Valor Total</th>
                         <th colspan="2">Valor Médio</th>
                         <th colspan="2">Menor Preço</th>
                         <th rowspan="2">Ações</th>
                     </tr>
                     <tr>
-                        <th>Fornecedor</th>
-                        <th>Valor Unitário<br><span class="dica-campo">(Digite o valor)</span></th>
-                        <th>Valor Total</th>
-                        <th>Fornecedor</th>
-                        <th>Valor Unitário<br><span class="dica-campo">(Digite o valor)</span></th>
-                        <th>Valor Total</th>
-                        <th>Fornecedor</th>
-                        <th>Valor Unitário<br><span class="dica-campo">(Digite o valor)</span></th>
-                        <th>Valor Total</th>
+                        <th><span class="dica-campo">(Digite o valor)</span></th>
+                        <th><span class="dica-campo">(Qtd × Valor Unit.)</span></th>
                         <th>Valor Unit.</th>
                         <th>Valor Total</th>
                         <th>Valor Unit.</th>
@@ -195,15 +187,8 @@
                 <div class="marcas-wrapper"></div>
                 <button type="button" class="btn-add-marca"><i class="fas fa-plus"></i></button>
             </td>
-            <td class="fornecedor-cell fornecedor-cell-1"></td>
-            <td><input type="number" class="valor-unit-1" placeholder="0.00" step="0.01" min="0"></td>
-            <td class="valor-total-1">R$ 0,00</td>
-            <td class="fornecedor-cell fornecedor-cell-2"></td>
-            <td><input type="number" class="valor-unit-2" placeholder="0.00" step="0.01" min="0"></td>
-            <td class="valor-total-2">R$ 0,00</td>
-            <td class="fornecedor-cell fornecedor-cell-3"></td>
-            <td><input type="number" class="valor-unit-3" placeholder="0.00" step="0.01" min="0"></td>
-            <td class="valor-total-3">R$ 0,00</td>
+            <td class="valor-unit-item">-</td>
+            <td class="valor-total-item">-</td>
             <td class="valor-medio-unit">R$ 0,00</td>
             <td class="valor-medio-total">R$ 0,00</td>
             <td class="menor-valor-unit">R$ 0,00</td>
