--- a/index.html
+++ b/index.html
@@ -140,15 +140,20 @@
                         <th rowspan="2">Unidade<br><span class="dica-campo">(Ex: Kg, L, Un)</span></th>
                         <th rowspan="2">Qtd<br><span class="dica-campo">(Quantidade)</span></th>
                         <th rowspan="2">Marca<br><span class="dica-campo">(Até 3 marcas por item)</span></th>
-                        <th>Valor Unitário</th>
-                        <th>Valor Total</th>
+                        <th colspan="2">Fornecedor 1</th>
+                        <th colspan="2">Fornecedor 2</th>
+                        <th colspan="2">Fornecedor 3</th>
                         <th colspan="2">Valor Médio</th>
                         <th colspan="2">Menor Preço</th>
                         <th rowspan="2">Ações</th>
                     </tr>
                     <tr>
-                        <th><span class="dica-campo">(Digite o valor)</span></th>
-                        <th><span class="dica-campo">(Qtd × Valor Unit.)</span></th>
+                        <th>Valor Unit.</th>
+                        <th>Valor Total</th>
+                        <th>Valor Unit.</th>
+                        <th>Valor Total</th>
+                        <th>Valor Unit.</th>
+                        <th>Valor Total</th>
                         <th>Valor Unit.</th>
                         <th>Valor Total</th>
                         <th>Valor Unit.</th>
@@ -187,8 +192,12 @@
                 <div class="marcas-wrapper"></div>
                 <button type="button" class="btn-add-marca"><i class="fas fa-plus"></i></button>
             </td>
-            <td class="valor-unit-item">-</td>
-            <td class="valor-total-item">-</td>
+            <td class="fornecedor-cell-1"></td>
+            <td class="valor-total-1">-</td>
+            <td class="fornecedor-cell-2"></td>
+            <td class="valor-total-2">-</td>
+            <td class="fornecedor-cell-3"></td>
+            <td class="valor-total-3">-</td>
             <td class="valor-medio-unit">R$ 0,00</td>
             <td class="valor-medio-total">R$ 0,00</td>
             <td class="menor-valor-unit">R$ 0,00</td>
